--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.0"
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.0",
+    "react-typing-game-hook": "^1.4.2"
   }
 }
